--- a/rsc/generalData.properties
+++ b/rsc/generalData.properties
@@ -22,10 +22,13 @@ MERGEFUNCTION=yes
 SMSENABLED=no
 INTERNALVIEWER=yes
 MAINMENUALWAYSONTOP=no
-RECEIPTPRINTER=no
+RECEIPTPRINTER=yes
 VIDEOMODULEENABLED=no
 PATIENTVACCINEEXTENDED=yes
 ENHANCEDSEARCH=no
 XMPPMODULEENABLED=no
 DICOMMODULEENABLED=yes
 DEBUG=no
+ALLOWPRINTOPENEDBILL=yes
+PATIENTBILLGROUPED=PatientBillGrouped
+ALLOWMULTIPLEOPENEDBILL=yes
