Fixed Accounting module:
- Fixed pending table dataset when selecting patients
- Added patient's statement report
- Fixed patient grouped report

--- a/rsc/generalData.properties
+++ b/rsc/generalData.properties
@@ -33,5 +33,6 @@ DICOMMODULEENABLED=yes
 ALLOWPRINTOPENEDBILL=yes
 ALLOWMULTIPLEOPENEDBILL=yes
 PATIENTBILLGROUPED=PatientBillGrouped
+PATIENTBILLSTATEMENT=PatientBillStatement
 DEBUG=no
 
