--- a/rsc/generalData.properties
+++ b/rsc/generalData.properties
@@ -35,4 +35,5 @@ ALLOWMULTIPLEOPENEDBILL=yes
 PATIENTBILLGROUPED=PatientBillGrouped
 PATIENTBILLSTATEMENT=PatientBillStatement
 DEBUG=no
+OPDOPERATION=yes
 
