--- a/pom.xml
+++ b/pom.xml
@@ -199,7 +199,7 @@
 		<dependency>
   			<groupId>org.isf</groupId>
   			<artifactId>OH-core</artifactId>
-  			<version>1.9-test</version>
+  			<version>1.9</version>
   			<exclusions>
   				<exclusion>
   					<groupId>org.apache.poi</groupId>
