Added missing parameter

--- a/rsc/generalData.properties
+++ b/rsc/generalData.properties
@@ -4,6 +4,7 @@ SINGLEUSER=yes
 AUTOMATICLOT=no
 LOTWITHCOST=yes
 PATIENTSHEET=patient_clinical_sheet_ver2
+VISITSHEET=WardVisits
 OPDCHART=patient_opd_chart
 ADMCHART=patient_adm_chart
 DISCHART=patient_dis_chart
