--- a/rsc/examination.properties
+++ b/rsc/examination.properties
@@ -8,7 +8,7 @@ WEIGHT_UNIT = Kg
 WEIGHT_MIN = 0
 WEIGHT_MAX = 200
 WEIGHT_INIT = 0
-WEIGHT_STEP = 0.1
+#WEIGHT_STEP = 0.1
 AP_UNIT = mmHg
 AP_MIN = 80
 AP_MAX = 120
