--- a/rsc/examination.properties
+++ b/rsc/examination.properties
@@ -4,6 +4,7 @@ HEIGHT_UNIT = cm
 HEIGHT_MIN = 0
 HEIGHT_MAX = 250
 HEIGHT_INIT = 0
+HEIGHT_STEP = 0.1
 WEIGHT_UNIT = Kg
 WEIGHT_MIN = 0
 WEIGHT_MAX = 200
