--- a/rsc/examination.properties
+++ b/rsc/examination.properties
@@ -4,7 +4,7 @@ HEIGHT_UNIT = cm
 HEIGHT_MIN = 0
 HEIGHT_MAX = 250
 HEIGHT_INIT = 0
-HEIGHT_STEP = 0.1
+HEIGHT_STEP = 1
 WEIGHT_UNIT = Kg
 WEIGHT_MIN = 0
 WEIGHT_MAX = 200
@@ -25,5 +25,5 @@ TEMP_STEP = 0.1
 SAT_UNIT = %
 SAT_INIT = 90
 SAT_MIN = 50
-SAT_MAX = 100
+#SAT_MAX = 100
 SAT_STEP = 0.1
