--- a/rsc/log4j.properties
+++ b/rsc/log4j.properties
@@ -1,5 +1,4 @@
 # logging di default su file, livello FINEST (debug++)
-log4j.rootLogger=INFO, StdOut
 log4j.rootCategory=FINEST, null
 
 # Null appender (off)
@@ -26,27 +25,12 @@ log4j.appender.DB.sql=INSERT INTO LOG (LOG_TYPE, LOG_CLASS, LOG_METHOD, LOG_TIME
 log4j.appender.DB.layout=org.apache.log4j.PatternLayout
 
 # Assigning appenders to packages
-log4j.category.org.isf=DEBUG,RollingFile,StdOut
+log4j.category.org.isf=DEBUG,RollingFile
 log4j.additivity.org.isf = false
 
-# Assigning appenders to Hibernate packages, set
-# - hibernate.SQL to DEBUG for SQL queries to be logged
-# - hibernate.type to TRACE for queries parameters to be logged with "binding parameter [?]"
+# Assigning appenders to Hibernate packages
+# - SQL query will be logged
+# - parameters will be logged with prefix "binding parameter [?]"
 log4j.logger.org.hibernate=INFO,RollingFile,StdOut
 log4j.logger.org.hibernate.SQL=INFO,RollingFile,StdOut
 log4j.logger.org.hibernate.type=INFO,RollingFile,StdOut
-log4j.logger.org.springframework.beans=INFO,RollingFile,StdOut
-#log4j.additivity.org.springframework.beans = true
-#log4j.logger.org.springframework.orm.jpa=DEBUG
-#log4j.logger.org.springframework.transaction=DEBUG
-#log4j.logger.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
-#log4j.logger.org.hibernate.transaction=DEBUG
-#log4j.logger.org.springframework.transaction=DEBUG
-#log4j.logger.org.springframework.transaction.interceptor=TRACE
-#log4j.logger.com.springsource=DEBUG
-#logging.level.ROOT=INFO
-#logging.level.org.springframework.orm.jpa=DEBUG
-#logging.level.org.springframework.transaction=DEBUG
-
-
-
