-add lot information ward to ward

--- a/rsc/generalData.properties
+++ b/rsc/generalData.properties
@@ -2,7 +2,7 @@
 LANGUAGE=en
 SINGLEUSER=yes
 AUTOMATICLOT_IN=no
-AUTOMATICLOT_OUT=yes
+AUTOMATICLOT_OUT=no
 LOTWITHCOST=yes
 PATIENTSHEET=patient_clinical_sheet_ver2
 OPDCHART=patient_opd_chart
