--- a/pom.xml
+++ b/pom.xml
@@ -241,11 +241,6 @@
 			<version>2.2</version>
 		</dependency>
 		<dependency>
-		    <groupId>org.processing</groupId>
-		    <artifactId>core</artifactId>
-		    <version>2.2.1</version>
-		</dependency>
-		<dependency>
 		    <groupId>org.rxtx</groupId>
 		    <artifactId>rxtx</artifactId>
 		    <version>2.1.7</version>
@@ -305,7 +300,17 @@
 			<artifactId>jgoodies-forms</artifactId>
 			<version>1.9.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.jgoodies</groupId>
+			<artifactId>jgoodies-looks</artifactId>
+			<version>2.7.0</version>
+		</dependency>
 
+		<dependency>
+			<groupId>com.jgoodies</groupId>
+			<artifactId>jgoodies-validation</artifactId>
+			<version>2.5.1</version>
+		</dependency>
 	  	<!-- <dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi</artifactId>
