--- a/rsc/generalData.properties
+++ b/rsc/generalData.properties
@@ -1,5 +1,5 @@
 # This file contains OpenHospital settings
-LANGUAGE=en
+LANGUAGE=zh_CN
 SINGLEUSER=yes
 AUTOMATICLOT=no
 LOTWITHCOST=yes
@@ -27,9 +27,10 @@ MAINMENUALWAYSONTOP=no
 RECEIPTPRINTER=yes
 VIDEOMODULEENABLED=no
 PATIENTVACCINEEXTENDED=yes
-ENHANCEDSEARCH=no
-XMPPMODULEENABLED=no
+ENHANCEDSEARCH=yes
+XMPPMODULEENABLED=yes
 DICOMMODULEENABLED=yes
+DICOMTHUMBNAILS=no
 ALLOWPRINTOPENEDBILL=yes
 ALLOWMULTIPLEOPENEDBILL=yes
 PATIENTBILLGROUPED=PatientBillGrouped
