OP-158: Prevent GUI freeze when opening some window due to deadlock * Thread 1 (looks like it is the EDT): CursorManager was locking the WaitCursorEventQueue, and then attempt to hold lock on underlying EventQueue * Thread 2: has lock on the underlying EventQueue tried to hold lock on WaitCursorEventQueue * Tried to fix this by making sure Thread 1 acquire the underlying EventQueue first, before holding lock on WaitCursorEventQueue (in the same order as Thread 2)

--- a/pom.xml
+++ b/pom.xml
@@ -285,6 +285,11 @@
 	  		<artifactId>spring-context</artifactId>
 	  		<version>${spring.framework.version}</version>
 	  	</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.5</version>
+		</dependency>
 	  	<!-- <dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi</artifactId>
