OP-139: Upgrading to processing core 2.2.1 (#66)
* OP-139: Upgrading to processing core 2.2.1
Version 1.2.1 cant be accessed from cytoscape repo anymore
* OP-139: Using webcam-capture library to capture image from webcam
* The old library (processing-core, etc) is not working as expected. So switching to this new library which seems to work
* OP-139: Added resolution selector on the photobooth frame
* OP-139: Fixing image resolution change implementation
* OP-139: Minor UI restructure
* Also get rid of 'discard' image button. Quite frankly, it is useless.
* OP-139: Fixing memory leak bug
* Need to make sure that the resolution property change listener is removed when closing photo dialog.
* This also fix the issue where there can be multiple listener listening to the change in resolution combo box, and hence causing issue where the webcam library reporting error 'please close webcam before changing resolution'
* OP-139: Adding simple PhotoboothTester
* OP-139: Adding webcam selection
* so that user can choose webcam, when there is more than one available
* OP-139: Select default webcam
* upon opening photo dialog, choose default webcam
* OP-139: Reverting back to Java 6.

--- a/pom.xml
+++ b/pom.xml
@@ -207,13 +207,18 @@
   				</exclusion>
   			</exclusions>
 		</dependency>
-  		<!-- dependency>
-			<groupId>jcu.sal</groupId>
-			<artifactId>sal_isf</artifactId>
-			<version>1.0</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/sal_isf.jar</systemPath>
-		</dependency -->
+		<dependency>
+          <groupId>jcu.sal</groupId>
+          <artifactId>sal_isf</artifactId>
+          <version>1.0</version>
+          <scope>system</scope>
+          <systemPath>${project.basedir}/lib/sal_isf.jar</systemPath>
+        </dependency>
+		<dependency>
+			<groupId>com.github.sarxos</groupId>
+			<artifactId>webcam-capture</artifactId>
+			<version>0.3.11</version>
+		</dependency>
 		<dependency>
 			<groupId>jasperreports</groupId>
 			<artifactId>jasperreports</artifactId>
@@ -234,11 +239,6 @@
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
 			<version>2.2</version>
-		</dependency>
-		<dependency>
-		    <groupId>org.processing</groupId>
-		    <artifactId>core</artifactId>
-		    <version>1.2.1</version>
 		</dependency>
 		<dependency>
 		    <groupId>org.rxtx</groupId>
@@ -285,6 +285,32 @@
 	  		<artifactId>spring-context</artifactId>
 	  		<version>${spring.framework.version}</version>
 	  	</dependency>
+		<dependency>
+			<groupId>com.jgoodies</groupId>
+			<artifactId>jgoodies-common</artifactId>
+			<version>1.8.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.jgoodies</groupId>
+			<artifactId>jgoodies-binding</artifactId>
+			<version>2.13.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.jgoodies</groupId>
+			<artifactId>jgoodies-forms</artifactId>
+			<version>1.9.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.jgoodies</groupId>
+			<artifactId>jgoodies-looks</artifactId>
+			<version>2.7.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.jgoodies</groupId>
+			<artifactId>jgoodies-validation</artifactId>
+			<version>2.5.1</version>
+		</dependency>
 	  	<!-- <dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi</artifactId>
@@ -316,14 +342,6 @@
                 <id>dcm4che</id>
                 <name>Dcm4Che Repository</name>
                 <url>http://www.dcm4che.org/maven2/</url>
-                <snapshots>
-                    <enabled>false</enabled>
-                </snapshots>
-        </repository>
-        <repository>
-                <id>cytoscape</id>
-                <name>Cytoscape Repository</name>
-                <url>http://code.cytoscape.org/nexus/content/repositories/releases/</url>
                 <snapshots>
                     <enabled>false</enabled>
                 </snapshots>
