--- a/rsc/generalData.properties
+++ b/rsc/generalData.properties
@@ -1,5 +1,5 @@
 # This file contains OpenHospital settings
-LANGUAGE=zh_CN
+LANGUAGE=en
 SINGLEUSER=yes
 AUTOMATICLOT=no
 LOTWITHCOST=yes
@@ -25,12 +25,12 @@ SMSENABLED=no
 INTERNALVIEWER=yes
 MAINMENUALWAYSONTOP=no
 RECEIPTPRINTER=yes
-VIDEOMODULEENABLED=no
+VIDEOMODULEENABLED=yes
 PATIENTVACCINEEXTENDED=yes
-ENHANCEDSEARCH=yes
-XMPPMODULEENABLED=yes
+ENHANCEDSEARCH=no
+XMPPMODULEENABLED=no
 DICOMMODULEENABLED=yes
-DICOMTHUMBNAILS=no
+DICOMTHUMBNAILS=yes
 ALLOWPRINTOPENEDBILL=yes
 ALLOWMULTIPLEOPENEDBILL=yes
 PATIENTBILLGROUPED=PatientBillGrouped
