added AUTOMATICLOTWARD_TOWARD option and multiple discharge ward to

--- a/rsc/generalData.properties
+++ b/rsc/generalData.properties
@@ -3,6 +3,7 @@ LANGUAGE=en
 SINGLEUSER=yes
 AUTOMATICLOT_IN=no
 AUTOMATICLOT_OUT=no
+AUTOMATICLOTWARD_TOWARD=yes
 LOTWITHCOST=yes
 PATIENTSHEET=patient_clinical_sheet_ver2
 OPDCHART=patient_opd_chart
@@ -37,5 +38,6 @@ ALLOWPRINTOPENEDBILL=yes
 ALLOWMULTIPLEOPENEDBILL=yes
 PATIENTBILLGROUPED=PatientBillGrouped
 PATIENTBILLSTATEMENT=PatientBillStatement
-DEBUG=no
+DEBUG=yes
+
 
