restored default settings

--- a/rsc/generalData.properties
+++ b/rsc/generalData.properties
@@ -38,6 +38,5 @@ ALLOWPRINTOPENEDBILL=yes
 ALLOWMULTIPLEOPENEDBILL=yes
 PATIENTBILLGROUPED=PatientBillGrouped
 PATIENTBILLSTATEMENT=PatientBillStatement
-DEBUG=yes
-
+DEBUG=no
 
