Added DIURESIS_MIN and DIURESIS_MAX parameters and separated from
diuresis type (DEFAULT_DIURESIS_INIT = 100)

--- a/rsc/examination.properties
+++ b/rsc/examination.properties
@@ -29,6 +29,8 @@ SAT_STEP = 0.1
 HGT_MIN = 30
 HGT_MAX = 600
 HGT_INIT = 80
+DIURESIS_MIN = 0
+DIURESIS_MAX = 2500
 DIURESIS_INIT = 100
 RR_INIT = 20
 RR_MIN = 0
