--- a/rsc/generalData.properties
+++ b/rsc/generalData.properties
@@ -25,11 +25,12 @@ SMSENABLED=no
 INTERNALVIEWER=yes
 MAINMENUALWAYSONTOP=no
 RECEIPTPRINTER=yes
-VIDEOMODULEENABLED=no
+VIDEOMODULEENABLED=yes
 PATIENTVACCINEEXTENDED=yes
 ENHANCEDSEARCH=no
 XMPPMODULEENABLED=no
 DICOMMODULEENABLED=yes
+DICOMTHUMBNAILS=yes
 ALLOWPRINTOPENEDBILL=yes
 ALLOWMULTIPLEOPENEDBILL=yes
 PATIENTBILLGROUPED=PatientBillGrouped
