Added new changelog
Op 171 vezo 2 examination window changes (#82)

* OP-171 #comment added UoM to Saturation parameter #time 30min
* Re-mapped Examination module with immutable nullable types and set default temperature = 36°C
* Added new component ScaledJSlider in order to handle decimal values.
- SAT_MAX deprecated (it is always 100)
- HEIGHT_STEP default set to 1 (cm)
* PatientExamination refactoring and settings
- Fixed UoM: removed user defined UoM and adopted SI (Kg for the Weight
and meter for the Height)
- Renamed some DB fields names
* OP-171 #comment moving summary to the bottom
* Changed Summary panel with a JTable
* OP-171 #comment added input fields validations and tabbing
* OP-171 Added automatic conversion of not alphanumeric characters to the regional setting decimal separator in double e float fields
* OP-171 #comment added Remove button
* OP-171 #comment Changed [IT] Sintomi to [IT] Note
* Improved jCheckBoxes focus painting
* Moved getBMIdescription() method to Manager
* Removed unused variable
* Renamed one variable
* Fixed one label [AR][PT]
* OP-171 #comment added InputVerifier for all textfields
* OP-171 #comment Added new fields HGT, Diuresis and Bowel and moved Notes panel to the right

Op 173 vezo 4 new dicom features (#84)

* First version of JPEG compatibility in DICOM module
* Added new Dialog upon dicom/images loading
* Added Dicom Type gui with translations
* Linked DicomType to gui

TODO:
- possibility to add images to the same series
- handle big size images (IndexOutOfBoundsException

Updated OH-gui and OH-core artifacts versions

Uploaded new changelog

Updated version.properties

Reset default data

point 1/11/10 resolved

point 1/11/10 resolved

Fixed "Wheight"

Externalized translations

Changed with checkbox

Changed with checkbox fixed report

Used Spring application context

Aligned reports to 1.9.1

added choise of examination to print

fixed modal clinical sheet report

Added in Table OPERATION OPE_FOR- added differenziati

--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,15 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<name>OpenHospital-gui</name>
 	<url>www.open-hospital.org</url>
 	<organization>
 		<name>Informatici Senza Frontiere</name>
 		<url>www.informaticisenzafrontiere.org</url>
 	</organization>
-	
+
 	<groupId>org.isf</groupId>
 	<artifactId>OH-gui</artifactId>
 	<packaging>jar</packaging>
@@ -18,7 +19,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<spring.framework.version>4.3.18.RELEASE</spring.framework.version>
 	</properties>
-	
+
 	<build>
 		<plugins>
 			<plugin>
@@ -95,21 +96,10 @@
 							</resources>
 						</configuration>
 					</execution>
-					<!-- <execution>
-						<id>copy-doc</id>
-						<phase>validate</phase>
-						<goals>
-							<goal>copy-resources</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>${basedir}/target/OpenHospital20/doc</outputDirectory>
-							<resources>
-								<resource>
-									<directory>doc</directory>
-								</resource>
-							</resources>
-						</configuration>
-					</execution> -->
+					<!-- <execution> <id>copy-doc</id> <phase>validate</phase> <goals> <goal>copy-resources</goal> 
+						</goals> <configuration> <outputDirectory>${basedir}/target/OpenHospital20/doc</outputDirectory> 
+						<resources> <resource> <directory>doc</directory> </resource> </resources> 
+						</configuration> </execution> -->
 					<execution>
 						<id>copy-report</id>
 						<phase>validate</phase>
@@ -186,7 +176,7 @@
 			</plugin>
 		</plugins>
 	</build>
-	
+
 	<dependencies>
 		<dependency>
   			<groupId>org.isf</groupId>
@@ -208,11 +198,11 @@
 			<groupId>jasperreports</groupId>
 			<artifactId>jasperreports</artifactId>
 			<exclusions>
-	          <exclusion>
-	          	<groupId>com.lowagie</groupId>
-				<artifactId>itext</artifactId>
-	          </exclusion>
-	        </exclusions>
+				<exclusion>
+					<groupId>com.lowagie</groupId>
+					<artifactId>itext</artifactId>
+				</exclusion>
+			</exclusions>
 			<version>3.0.0</version>
 		</dependency>
 		<dependency>
@@ -240,17 +230,17 @@
 			<artifactId>dcm4che-imageio</artifactId>
 			<version>2.0.26</version>
 		</dependency>
-	  	<dependency>
-	  		<groupId>org.slf4j</groupId>
-	  		<artifactId>slf4j-api</artifactId>
-	  		<version>1.6.4</version>
-	  	</dependency>
-	  	<dependency>
-	  		<groupId>org.slf4j</groupId>
-	  		<artifactId>slf4j-log4j12</artifactId>
-	  		<version>1.6.4</version>
-	  	</dependency>
-	  	<dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.6.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.6.4</version>
+		</dependency>
+		<dependency>
 			<groupId>org.igniterealtime.smack</groupId>
 			<artifactId>smack</artifactId>
 			<version>3.2.1</version>
