--- a/rsc/generalData.properties
+++ b/rsc/generalData.properties
@@ -3,7 +3,8 @@ LANGUAGE=en
 SINGLEUSER=yes
 AUTOMATICLOT=no
 LOTWITHCOST=yes
-PATIENTSHEET=patient_clinical_sheet_ver2
+PATIENTSHEET=patient_clinical_sheet_ver3
+EXAMINATIONCHART=patient_examination
 OPDCHART=patient_opd_chart
 ADMCHART=patient_adm_chart
 DISCHART=patient_dis_chart
@@ -36,4 +37,5 @@ ALLOWMULTIPLEOPENEDBILL=yes
 PATIENTBILLGROUPED=PatientBillGrouped
 PATIENTBILLSTATEMENT=PatientBillStatement
 DEBUG=no
+OPDOPERATION=yes
 
