--- a/rsc/examination.properties
+++ b/rsc/examination.properties
@@ -4,7 +4,6 @@ HEIGHT_MIN = 0
 HEIGHT_MAX = 250
 HEIGHT_INIT = 0
 #HEIGHT_STEP = 1
-#WEIGHT_UNIT = kg
 WEIGHT_MIN = 0
 WEIGHT_MAX = 200
 WEIGHT_INIT = 0
@@ -16,7 +15,7 @@ AP_MAX_INIT = 120
 HR_MIN = 0
 HR_MAX = 240
 HR_INIT = 60
-#TEMP_UNIT = *C
+#TEMP_UNIT = °C
 TEMP_INIT = 36
 TEMP_MIN = 30
 TEMP_MAX = 50
