--- a/rsc/generalData.properties
+++ b/rsc/generalData.properties
@@ -3,6 +3,7 @@ LANGUAGE=en
 SINGLEUSER=yes
 AUTOMATICLOT=no
 LOTWITHCOST=yes
+VISITSHEET=WardVisits
 PATIENTSHEET=patient_clinical_sheet_ver3
 EXAMINATIONCHART=patient_examination
 OPDCHART=patient_opd_chart
