--- a/rsc/examination.properties
+++ b/rsc/examination.properties
@@ -4,6 +4,7 @@ HEIGHT_MIN = 0
 HEIGHT_MAX = 250
 HEIGHT_INIT = 0
 #HEIGHT_STEP = 1
+#WEIGHT_UNIT = Kg
 WEIGHT_MIN = 0
 WEIGHT_MAX = 200
 WEIGHT_INIT = 0
