--- a/rsc/generalData.properties
+++ b/rsc/generalData.properties
@@ -1,7 +1,9 @@
 # This file contains OpenHospital settings
 LANGUAGE=en
 SINGLEUSER=yes
-AUTOMATICLOT=no
+AUTOMATICLOT_IN=no
+AUTOMATICLOT_OUT=no
+AUTOMATICLOTWARD_TOWARD=no
 LOTWITHCOST=yes
 VISITSHEET=WardVisits
 PATIENTSHEET=patient_clinical_sheet_ver3
@@ -15,6 +17,7 @@ BILLSREPORTPENDING=BillsReportPending
 BILLSREPORTMONTHLY=BillsReportMonthly
 PHARMACEUTICALORDER=PharmaceuticalOrder
 PHARMACEUTICALSTOCK=PharmaceuticalStock_ver4
+PHARMACEUTICALSTOCKLOT=PharmaceuticalStock_ver5
 PHARMACEUTICALAMC=PharmaceuticalAMC
 PATIENTEXTENDED=yes
 OPDEXTENDED=yes
@@ -38,5 +41,4 @@ ALLOWMULTIPLEOPENEDBILL=yes
 PATIENTBILLGROUPED=PatientBillGrouped
 PATIENTBILLSTATEMENT=PatientBillStatement
 DEBUG=no
-OPDOPERATION=yes
 
