commons logging snapshot dependency hotfix

--- a/pom.xml
+++ b/pom.xml
@@ -199,6 +199,10 @@
 			<artifactId>jasperreports</artifactId>
 			<exclusions>
 				<exclusion>
+					<groupId>commons-logging</groupId>
+					<artifactId>commons-logging</artifactId>
+				</exclusion>
+				<exclusion>
 					<groupId>com.lowagie</groupId>
 					<artifactId>itext</artifactId>
 				</exclusion>
