--- a/rpt/hmis033_weekly_epid_surv_under_5.properties
+++ b/rpt/hmis033_weekly_epid_surv_under_5.properties
@@ -6,7 +6,7 @@ Dead = Dead
 
 Diagnosis = Diagnosis
 
-From.Date = From Date:
+From.Date = From Date
 
 Hmis.033.B.Weekly.Epidemiological.Surveillance = HMIS 033 b: Weekly \
                                                  Epidemiological Surveillance
