--- a/rpt/hmis105_opd_attendance.properties
+++ b/rpt/hmis105_opd_attendance.properties
@@ -13,8 +13,8 @@ Hmis105.Health.Unit.Outpatient.Monthly.Report = HMIS105: HEALTH UNIT \
 
 M = M
 
-Month = Month:
+Month = Month
 
 Under.Five.Years.Older = Under five years older
 
-Year = Year:
+Year = Year
