--- a/rpt/hmis105_opd_by_diagnosis.properties
+++ b/rpt/hmis105_opd_by_diagnosis.properties
@@ -37,8 +37,8 @@ Hmis105.Health.Unit.Outpatient.Monthly.Report = HMIS105: HEALTH UNIT \
 
 M = M
 
-Month = Month:
+Month = Month
 
 Under.Five.Years = Under five years
 
-Year = Year:
+Year = Year
