--- a/rpt/hmis033_weekly_epid_surv_over_5.properties
+++ b/rpt/hmis033_weekly_epid_surv_over_5.properties
@@ -6,7 +6,7 @@ Dead = Dead
 
 Diagnosis = Diagnosis
 
-From.Date = From Date:
+From.Date = From Date
 
 Hmis.033.B.Weekly.Epidemiological.Surveillance = HMIS 033 b: Weekly \
                                                  Epidemiological Surveillance
@@ -16,4 +16,4 @@ In.Patient.Diag.Out = In Patient (diag out)
 
 Out.Patient = Out Patient
 
-To.DateYear = To DateYear:
+To.DateYear = To DateYear
