--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,7 +13,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Checkout core
-      run: git clone --depth=50 --branch=develop https://github.com/informatici/openhospital-core.git openhospital-core
+      # TODO: revert to --branch=develop before to merge into 'develop'
+      run: git clone --depth=50 --branch=OP-282-101_Spring5_and_Java8_time https://github.com/informatici/openhospital-core.git openhospital-core
     - name: Install core
       run: cd openhospital-core && mvn install -DskipTests=true && cd ..
     - name: Set up JDK 1.8
