--- a/pom.xml
+++ b/pom.xml
@@ -332,6 +332,11 @@
 			<version>poi-3.7</version>
 			<scope>provided</scope>
 		</dependency> -->
+		<dependency>
+			<groupId>javax.media</groupId>
+			<artifactId>jai-core</artifactId>
+			<version>1.1.3</version>
+		</dependency>
   </dependencies>
   <repositories>
     	<repository>
