Adjusted pom.xml to include libs from 'core'

--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,9 @@
 								<resource>
 									<directory>lib/native</directory>
 								</resource>
+								<resource>
+		                       		<directory>../openhospital-core/lib/native</directory>
+		                    	</resource>
 							</resources>
 						</configuration>
 					</execution>
