--- a/build.properties
+++ b/build.properties
@@ -17,7 +17,7 @@ bundle.dir = bundle
 #Runtime directory
 lib.dir = lib
 #Mysql scripts directory
-mysql.dir=mysql
+mysql.dir=sql
 #Documentation directory
 doc.dir=doc
 #Distribution files
