--- a/pom.xml
+++ b/pom.xml
@@ -246,6 +246,17 @@
 		    <groupId>net.sf.jasperreports</groupId>
 		    <artifactId>jasperreports</artifactId>
 		    <version>6.16.0</version>
+		    <exclusions>
+		    	<exclusion>
+		    		<groupId>com.lowagie</groupId>
+		    		<artifactId>itext</artifactId>
+		    	</exclusion>
+		    </exclusions>
+		</dependency>
+		<dependency>
+			<groupId>com.lowagie</groupId>
+			<artifactId>itext</artifactId>
+			<version>2.1.7</version>
 		</dependency>
 		<dependency>
 		    <groupId>net.sf.jasperreports</groupId>
@@ -266,16 +277,6 @@
 		    <groupId>org.rxtx</groupId>
 		    <artifactId>rxtx</artifactId>
 		    <version>2.1.7</version>
-		</dependency>
-		<dependency>
-			<groupId>dcm4che</groupId>
-			<artifactId>dcm4che-core</artifactId>
-			<version>2.0.26</version>
-		</dependency>
-		<dependency>
-			<groupId>dcm4che</groupId>
-			<artifactId>dcm4che-imageio</artifactId>
-			<version>2.0.26</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -327,14 +328,13 @@
 			<artifactId>jgoodies-looks</artifactId>
 			<version>2.7.0</version>
 		</dependency>
-
 		<dependency>
 			<groupId>com.jgoodies</groupId>
 			<artifactId>jgoodies-validation</artifactId>
 			<version>2.5.1</version>
 		</dependency>
   </dependencies>
-  <repositories>
+  <!-- <repositories>
         <repository>
                 <id>dcm4che</id>
                 <name>Dcm4Che Repository</name>
@@ -343,5 +343,5 @@
                     <enabled>false</enabled>
                 </snapshots>
         </repository>
-	</repositories>
+	</repositories> -->
 </project>
