--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
 	<version>1.10</version>
 	
 	<properties>
+		<oh.version>1.11</oh.version>
+		<java.version>1.8</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<spring.framework.version>4.3.28.RELEASE</spring.framework.version>
 		<license.maven.plugin.version>4.0.rc2</license.maven.plugin.version>
@@ -27,8 +29,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -235,7 +237,7 @@
 		<dependency>
   			<groupId>org.isf</groupId>
   			<artifactId>OH-core</artifactId>
-  			<version>1.11</version>
+  			<version>${oh.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.github.sarxos</groupId>
