Chore: information is plural

--- a/rsc/txtPrinter.properties
+++ b/rsc/txtPrinter.properties
@@ -1,4 +1,4 @@
-# This file contains text printing informations
+# This file contains text printing information
 # MODE = TXT, PDF or ZPL
 USE_DEFAULT_PRINTER=yes
 PRINT_AS_PAID=no
