--- a/rsc/generalData.properties
+++ b/rsc/generalData.properties
@@ -1,6 +1,6 @@
 # This file contains Open Hospital settings
 LANGUAGE=en
-SINGLEUSER=no
+SINGLEUSER=yes
 AUTOMATICLOT_IN=no
 AUTOMATICLOT_OUT=no
 AUTOMATICLOTWARD_TOWARD=no
@@ -26,7 +26,7 @@ LABEXTENDED=yes
 LABMULTIPLEINSERT=yes
 INTERNALPHARMACIES=yes
 MERGEFUNCTION=yes
-SMSENABLED=no
+SMSENABLED=yes
 INTERNALVIEWER=yes
 MAINMENUALWAYSONTOP=no
 RECEIPTPRINTER=yes
