settings file rollback

--- a/rsc/settings.properties
+++ b/rsc/settings.properties
@@ -1,6 +1,6 @@
 # This file contains Open Hospital settings
 LANGUAGE=en
-SINGLEUSER=yes
+SINGLEUSER=no
 AUTOMATICLOT_IN=no
 AUTOMATICLOT_OUT=no
 AUTOMATICLOTWARD_TOWARD=no
