OP-452 WIP resolved all the missing keys found in jrxml files

--- a/rpt/MOH717_Monthly_Workload_Report_for_Hospitals_page1.properties
+++ b/rpt/MOH717_Monthly_Workload_Report_for_Hospitals_page1.properties
@@ -108,3 +108,5 @@ TotalOutpatientServicesSum = TOTAL OUTPATIENT SERVICES\n(= A.1.5 + A.2 + A.3.8 \
 TotalSpecialClinics = TOTAL SPECIAL CLINICS
 
 Year = YEAR
+
+Clinic = CLINIC
