--- a/rsc/sms.properties
+++ b/rsc/sms.properties
@@ -22,10 +22,12 @@ gsm-gateway-service.cmgs=AT+CMGS\="
 ##################################################################
 # Skebby configuration
 ##################################################################
-# first we will try to use token, if null, then we will try to login with the provided username and password and retrieve token
 skebby-gateway-service.username=
 skebby-gateway-service.password=
 skebby-gateway-service.ribbon.base-url=https://api.skebby.it:443
+# USER_KEY and ACCESS_TOKEN avoids the login call every time we need to send sms
+skebby-gateway-service.accessToken=
+skebby-gateway-service.userKey=
 
 
 ##################################################################
