--- a/rsc/settings.properties
+++ b/rsc/settings.properties
@@ -26,7 +26,7 @@ LABEXTENDED=yes
 LABMULTIPLEINSERT=yes
 INTERNALPHARMACIES=yes
 MERGEFUNCTION=yes
-SMSENABLED=yes
+SMSENABLED=no
 INTERNALVIEWER=yes
 MAINMENUALWAYSONTOP=no
 RECEIPTPRINTER=yes
