Chore: fix two label from Transidex issues

--- a/rpt/MOH717_Monthly_Workload_Report_for_Hospitals_page2.properties
+++ b/rpt/MOH717_Monthly_Workload_Report_for_Hospitals_page2.properties
@@ -30,7 +30,7 @@ EnteredBy = Entered by
 
 FacilityName = FACILITY NAME
 
-GeneralAdults = GENERAL ADULTSGENERAL ADULTS
+GeneralAdults = GENERAL ADULTS
 
 GeneralPaediatrics = GENERAL PAEDIATRICS
 
