--- a/rpt/MOH717_Monthly_Workload_Report_for_Hospitals_page2b.properties
+++ b/rpt/MOH717_Monthly_Workload_Report_for_Hospitals_page2b.properties
@@ -25,7 +25,7 @@ F.SpecialServices = F. SPECIAL SERVICES (includes both inpatients and \
 
 FreshStillBirth = Fresh still birth
 
-IncludedsNormalAndAssistedDelivery = includeds Normal and assisted delivery
+IncludedsNormalAndAssistedDelivery = Included Normal and assisted delivery
 
 LaboratoryNumberOfTests = Laboratory - Number of Tests
 
