--- a/rsc/log4j.properties.dist
+++ b/rsc/log4j.properties.dist
@@ -31,6 +31,6 @@ log4j.additivity.org.isf = false
 # Assigning appenders to Hibernate packages (DB loggers)
 # - hibernate.SQL to DEBUG for SQL queries to be logged
 # - hibernate.type to TRACE for queries parameters to be logged with "binding parameter [?]"
-log4j.logger.org.hibernate=DEBUG_LEVEL,RollingFile,StdOut
+log4j.logger.org.hibernate=LOG_LEVEL,RollingFile,StdOut
 #log4j.logger.org.hibernate.SQL=INFO,RollingFile,StdOut
 #log4j.logger.org.hibernate.type=INFO,RollingFile,StdOut
