--- a/rsc/log4j.properties.dist
+++ b/rsc/log4j.properties.dist
@@ -1,5 +1,5 @@
-# logging di default su file, livello FINEST (debug++)
-log4j.rootCategory=FINEST, null
+# global logging to RollingFile (logs/ folder), available levels INFO, DEBUG, FINEST (debug++)
+log4j.rootCategory=INFO,RollingFile
 
 # Null appender (off)
 log4j.appender.null=org.apache.log4j.varia.NullAppender
@@ -12,25 +12,25 @@ log4j.appender.StdOut.layout.ConversionPattern=[%d{dd/MMM/yyyy HH:mm:ss}] [%X{OH
 # File Appender (with classes), daily rotation
 log4j.appender.RollingFile = org.apache.log4j.DailyRollingFileAppender
 log4j.appender.RollingFile.DatePattern='.'yyyy-MM-dd
-log4j.appender.RollingFile.File=logs/openhospital.log
+log4j.appender.RollingFile.File=LOG_DEST
 log4j.appender.RollingFile.layout=org.apache.log4j.PatternLayout
 log4j.appender.RollingFile.layout.ConversionPattern=[%d{dd/MMM/yyyy HH:mm:ss}] [%X{OHUserGroup}:%X{OHUser}] %-p - %m (%l)%n
 
 # DB Appender (table columns)
 log4j.appender.DB=org.apache.log4j.jdbc.JDBCAppender
-log4j.appender.DB.URL=jdbc:mysql://localhost:3306/oh?autoReconnect=true
-log4j.appender.DB.user=isf
-log4j.appender.DB.password=isf123
+log4j.appender.DB.URL=jdbc:mysql://DBSERVER:DBPORT/DBNAME?autoReconnect=true
+log4j.appender.DB.user=DBUSER
+log4j.appender.DB.password=DBPASS
 log4j.appender.DB.sql=INSERT INTO LOG (LOG_TYPE, LOG_CLASS, LOG_METHOD, LOG_TIME, LOG_MESS, LOG_USER) VALUES (1, '%C', '%M', '%d{yyyy-MM-dd HH:mm:ss}', LEFT('%m', 1024), '%X{OHUser}')
 log4j.appender.DB.layout=org.apache.log4j.PatternLayout
 
-# Assigning appenders to packages
-log4j.category.org.isf=DEBUG,RollingFile,StdOut
+# Assigning appenders to packages (application loggers)
+log4j.category.org.isf=DEBUG_LEVEL,RollingFile
 log4j.additivity.org.isf = false
 
-# Assigning appenders to Hibernate packages, set
-# set hibernate.SQL to DEBUG for SQL queries to be logged
-# set hibernate.type to TRACE for queries parameters to be logged with "binding parameter [?]"
-log4j.logger.org.hibernate=INFO,RollingFile,StdOut
-log4j.logger.org.hibernate.SQL=INFO,RollingFile,StdOut
-log4j.logger.org.hibernate.type=INFO,RollingFile,StdOut
+# Assigning appenders to Hibernate packages (DB loggers)
+# - hibernate.SQL to DEBUG for SQL queries to be logged
+# - hibernate.type to TRACE for queries parameters to be logged with "binding parameter [?]"
+log4j.logger.org.hibernate=LOG_LEVEL,RollingFile,StdOut
+#log4j.logger.org.hibernate.SQL=INFO,RollingFile,StdOut
+#log4j.logger.org.hibernate.type=INFO,RollingFile,StdOut
