OP-633 Split titles in two lines, also add missing title

--- a/rpt/BillsReportMonthly.properties
+++ b/rpt/BillsReportMonthly.properties
@@ -10,4 +10,12 @@ Receivable = Receivable
 
 Report.From = report from
 
-To = TO
+To = To
+
+Periodical.Incomes.Billed.And.Receivables.Report = Periodical \
+                                                    Incomes/Billed \
+                                                    and \
+                                                    Receivables \
+                                                    Report
+
+Month.Summary = (month summary)
