--- a/rpt/BillsReportPending.properties
+++ b/rpt/BillsReportPending.properties
@@ -16,21 +16,21 @@ Paid = Paid
 
 Patient = Patient
 
-Periodical.Incomes.Billed.And.Receivables.Report.With.Pending.Invoices = Period\
-                                                                         ical \
-                                                                         Income\
-                                                                         s/Bill\
-                                                                         ed \
-                                                                         and \
-                                                                         Receiv\
-                                                                         ables \
-                                                                         Report\
-                                                                          \
-                                                                         (with \
-                                                                         pendin\
-                                                                         g \
-                                                                         invoic\
-                                                                         es)
+Periodical.Incomes.Billed.And.Receivables.Report = Period\
+	                                                 ical \
+	                                                 Income\
+	                                                 s/Bill\
+	                                                 ed \
+	                                                 and \
+	                                                 Receiv\
+	                                                 ables \
+	                                                 Report
+
+With.Pending.Invoices = (with \
+                         pendin\
+                         g \
+                         invoic\
+                         es)
 
 Receivables = RECEIVABLES
 
